--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "Sistema di rilevazione della velocità per Roblox",
   "dependencies": {
     "firebase-admin": "^11.5.0"
+  },
+  "scripts": {
+    "build": "echo 'building...'"
   }
 }
