--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Sistema di rilevazione della velocità per Roblox",
   "dependencies": {
-    "firebase-admin": "^11.5.0"
+    "mongodb": "^4.13.0",
+    "firebase-admin": "^11.10.1"
   }
 }
