--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,7 @@
 [build]
   functions = "functions"
-  publish = "./"
-  command = "npm install"
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/:splat"
+  to = "/.netlify/functions/api/:splat"
   status = 200
